--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Ahmath-GADJI <ahmathgadji27@gmail.com>","MChrys <chrys.beltran@outlook.fr>"]
 readme = "README.md"
-
+packages = [ {include = "scripts"}] 
 [tool.poetry.dependencies]
 python = ">=3.12,<3.13"
 
@@ -33,6 +33,15 @@ python-docx = "^1.1.2"
 pypandoc = "^1.14"
 click = "^8.1.7"
 git-filter-repo = "^2.45.0"
+
+
+[tool.poetry.group.dev.dependencies]
+python-dotenv = "^1.0.1"
+gitpython = "^3.1.43"
+docker = "^7.1.0"
+
+[tool.poetry.scripts]
+deploy_compose_service = { callable = "scripts.deploy_compose_service:main", extras = ["dev"] }
 
 
 [build-system]
