--- a/compose_projects/chainlit_compose/docker-compose.yaml
+++ b/compose_projects/chainlit_compose/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       - chainlit_app:/${WORKDIR}/app
       - source:/${WORKDIR}/src
       - pickled_weights:/${WORKDIR}/model_weights
+      - visual_assets:/${WORKDIR}/public
+
     
     environment:
       - POETRY_VIRTUALENVS_PATH=/${WORKDIR}/${ENVS_PATH}/${VENV_NAME}
@@ -91,3 +93,11 @@ volumes:
       type: none
       o: bind
       device: '${PWD}/model_weights'
+
+
+  visual_assets:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: '${PWD}/public'
