--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ click = "^8.1.7"
 git-filter-repo = "^2.45.0"
 python-pptx = "^1.0.2"
 llama-index-llms-langchain = "^0.5.0"
+fastapi = {extras = ["standard"], version = "^0.115.5"}
+aiofiles = "23.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
