--- a/.hydra_config/llm/llama.yaml
+++ b/.hydra_config/llm/llama.yaml
@@ -2,7 +2,5 @@ defaults:
   - base
 
 base_url: https://chat.ai.linagora.exaion.com/v1
-name: meta-llama-31-8b-it
-portkey_api_key: ${oc.env:PORTKEY_API_KEY}
-virtual_key: ${oc.env:VIRTUAL_KEY}
+model: meta-llama-31-8b-it
 api_key: ${oc.env:API_KEY}
