--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "aiopath>=0.7.7",
     "chainlit>=2.2.1",
+    "debugpy>=1.8.13",
     "docling>=2.24.0",
     "einops>=0.8.1",
     "fastembed-gpu>=0.4.2",
