--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,10 @@ API_KEY=
 # App
 APP_PORT=8080
 
-# Qdrant
-QDRANT_HOST=qdrant
-QDRANT_PORT=6333
+# Vector db
+VDB_HOST=milvus
+VDB_PORT=19530
+VDB_CONNECTOR_NAME=milvus
 
 # Prompts
 PROMPTS_DIR=../prompts/example2
