--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -20,6 +20,7 @@ vectordb:
   connector_name: ${oc.env:VDB_CONNECTOR_NAME, milvus}
   default_collection_name: vdb_test
   hybrid_mode: true
+  enable: true
 
 reranker:
   model_name: jinaai/jina-colbert-v2
@@ -39,3 +40,7 @@ paths:
 prompt:
   rag_sys_pmpt: rag_sys_prompt_template.txt # rag_sys_pmpt_tmpl_ifa.txt
   context_pmpt_tmpl: contextualize_prompt_template.txt
+
+loader:
+  image_captioning: true
+  
