--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "debugpy>=1.8.13",
     "docling>=2.24.0",
     "einops>=0.8.1",
-    "fastembed-gpu>=0.4.2",
+    "fastembed>=0.4.2",
     "hydra-core>=1.3.2",
     "langchain-community>=0.3.18",
     "langchain-core>=0.3.39",
@@ -28,4 +28,9 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "pyyaml>=6.0.2",
     "ragatouille>=0.0.9",
+]
+
+[project.optional-dependencies]
+gpu = [
+    "fastembed-gpu",
 ]
