--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ x-chainlit-app: &chainlit_template
     dockerfile: Dockerfile
   volumes:
     - ./model_weights:/app/model_weights
-    - ./data:/app/data # PDF data for RAG
+    - ./data/ragondin:/app/data # PDF data for RAG
     - ./ragondin:/app/ragondin # For dev mode
   ports:
     - "${APP_PORT}:8080"
