--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 include:
   - vdb/${VDB_HOST}.yaml
 services:
-  chainlit-app:
+  ragondin:
     build: 
       dockerfile: Dockerfile
     volumes:
