--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,5 +31,6 @@ dependencies = [
     "ragatouille>=0.0.9",
     "whisperx>=3.3.1",
     "spire-doc>=13.1.0",
-    "markitdown>=0.0.2"
+    "markitdown>=0.0.2",
+    "openai>=1.64.0",
 ]
