--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -13,7 +13,7 @@ vectordb:
   host: ${oc.env:VDB_HOST, milvus}
   port: ${oc.env:VDB_PORT, 19530}
   connector_name: ${oc.env:VDB_CONNECTOR_NAME, milvus}
-  collection_name: vdb_test
+  collection_name: IVF_HNSW_IP # HNSW_ip # ivf_flat_tuto # ivf_flat_ip # ivf_flat_cosine1 # 
   hybrid_mode: true
   enable: true
 
@@ -23,10 +23,10 @@ insertion:
 
 reranker:
   model_name: jinaai/jina-colbert-v2
-  top_k: 7
+  top_k: 8
 
 grader:
-  grade_documents: true
+  grade_documents: false
 
 verbose:
   verbose: true
@@ -44,7 +44,7 @@ loader:
   image_captioning: true
   file_loaders:
     docx: MarkItDownLoader
-    pdf: DoclingLoader
+    pdf: DoclingLoader # MarkerLoader # 
     doc: DocLoader
     pptx: PPTXLoader
     # odt: CustomDocLoader
