--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,18 @@
 # LLM
-BASE_URL=
-API_KEY=
+BASE_URL="http://91.134.49.99:8000/v1/"
+API_KEY='sk-Xt9LmQvJw2ZaBf_T7NpYdC'
+
 
 # App
 APP_PORT=8080
+APP_HOST=0.0.0.0
+
 
 # Vector db
 VDB_HOST=milvus
 VDB_PORT=19530
 VDB_CONNECTOR_NAME=milvus
+
 
 # Prompts
 PROMPTS_DIR=../prompts/example2
