--- a/.hydra_config/config.yaml
+++ b/.hydra_config/config.yaml
@@ -44,9 +44,10 @@ loader:
   image_captioning: true
   file_loaders:
     docx: MarkItDownLoader
-    pdf: DoclingLoader
+    pdf: DoclingLoader # MarkerLoader
     doc: DocLoader
     pptx: PPTXLoader
+    # txt: TextLoader
     # odt: CustomDocLoader
 
 semaphore:
