--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,42 @@
 # LLM
-BASE_URL=''
-API_KEY=''
-
+BASE_URL=
+API_KEY=
+MODEL=
+LLM_SEMAPHORE=10
+  
+# VLM
+VLM_BASE_URL=
+VLM_API_KEY=
+VLM_MODEL=
+VLM_SEMAPHORE=10
 
 # App
-APP_PORT=8080
+APP_PORT=8083
 APP_HOST=0.0.0.0
 
+# RAY
+RAY_DEDUP_LOGS=0
 
-# Vector db
+# Vector db VDB Milvus
 VDB_HOST=milvus
 VDB_PORT=19530
 VDB_CONNECTOR_NAME=milvus
 
+# RETRIEVER
+CONTEXTUAL_RETRIEVAL=false
+RETRIEVER_TOP_K=15
+
+# EMBEDDER
+EMBEDDER_MODEL=HIT-TMG/KaLM-embedding-multilingual-mini-v1
+
+# RERANKER
+RERANKER_MODEL=jinaai/jina-colbert-v2
+RERANKER_ENABLED=true
+RERANKER_TOP_K=8
 
 # Prompts
 PROMPTS_DIR=../prompts/example2
+COLBERT_LOAD_TORCH_EXTENSION_VERBOSE=True
+
+# Loaders
+PDFLoader=PyMuPDFLoader
