--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,12 +2,11 @@ include:
   - vdb/${VDB_HOST}.yaml
 
 x-ragondin: &ragondin_template
-  # build:
-  #   context: .
-  #   dockerfile: Dockerfile
-  #   args:
-  #     APP_PORT: ${APP_PORT}
-  image : ghcr.io/openllm-france/ragondin:latest
+  build:
+    context: .
+    dockerfile: Dockerfile
+    args:
+      APP_PORT: ${APP_PORT}
   volumes:
     - ./.hydra_config:/app/.hydra_config
     - ./model_weights:/app/model_weights
@@ -15,7 +14,7 @@ x-ragondin: &ragondin_template
     - ./ragondin:/app/ragondin # For dev mode
 
   ports:
-    - "${APP2_PORT}:${APP_PORT}"
+    - "${APP_PORT}:${APP_PORT}"
     - 8265:8265 # for ray
   env_file:
     - .env
