--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "langchain-qdrant>=0.2.0",
     "python-dotenv>=1.0.1",
     "pip>=25.0.1",
+    "chardet>=5.2.0",
 ]
 
 [dependency-groups]
